--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Stylish Portfolio - Start Bootstrap Template</title>
+    <title>Aaron Jeskie</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,22 +33,25 @@
           <i class="fa fa-times"></i>
         </a>
         <li class="sidebar-brand">
-          <a class="js-scroll-trigger" href="#top">Start Bootstrap</a>
+          <a class="js-scroll-trigger" href="#top">acode.io</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#top">Home</a>
+          <a class="js-scroll-trigger" href="#top">Let's take it from the top!</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#about">About</a>
+          <a class="js-scroll-trigger" href="#about">Who is this guy?</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#services">Services</a>
+          <a class="js-scroll-trigger" href="#shortcuts">That paper thing</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+          <a class="js-scroll-trigger" href="#portfolio">What has he done?</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#contact" onclick=$( "#menu-close").click();>Contact</a>
+            <a class="js-scroll-trigger" href="#resume">What has he done?</a>
+        </li>
+        <li>
+          <a class="js-scroll-trigger" href="#contact" onclick=$("#menu-close").click();>Contact</a>
         </li>
       </ul>
     </nav>
@@ -56,55 +59,43 @@
     <!-- Header -->
     <header class="header" id="top">
       <div class="text-vertical-center">
-        <h1>Start Bootstrap</h1>
-        <h3>Free Bootstrap Themes &amp; Templates</h3>
+        <h1>Aaron Jeskie</h1>
+        <h3>Software Developer</h3>
         <br>
-        <a href="#about" class="btn btn-dark btn-lg js-scroll-trigger">Find Out More</a>
+        <a href="#shortcuts" class="btn btn-dark btn-lg js-scroll-trigger">Proceed to go!</a>
       </div>
     </header>
 
-    <!-- About -->
-    <section id="about" class="about">
-      <div class="container text-center">
-        <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-        <p class="lead">This theme features some wonderful photography courtesy of
-          <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
-      </div>
-      <!-- /.container -->
-    </section>
-
     <!-- Services -->
-    <section id="services" class="services bg-primary text-white">
+    <section id="shortcuts" class="services bg-dark text-white">
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-10 mx-auto">
-            <h2>Our Services</h2>
+            <h2>Shortcuts <small>(or keep scrolling to take the tour)</small></h2>
             <hr class="small">
             <div class="row">
               <div class="col-md-3 col-sm-6">
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                    <i class="fa fa-user fa-stack-1x text-primary"></i>
                   </span>
                   <h4>
-                    <strong>Service Name</strong>
+                    <strong>Who is this guy?</strong>
                   </h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <a href="#" class="btn btn-light">Learn More</a>
+                  <a href="#about" class="btn btn-light js-scroll-trigger">I want to know!</a>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                    <i class="fa fa-desktop fa-stack-1x text-primary"></i>
                   </span>
                   <h4>
-                    <strong>Service Name</strong>
+                    <strong>What has he done?</strong>
                   </h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <a href="#" class="btn btn-light">Learn More</a>
+                  <a href="#portfolio" class="btn btn-light js-scroll-trigger">Let me see!</a>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
@@ -114,10 +105,9 @@
                     <i class="fa fa-flask fa-stack-1x text-primary"></i>
                   </span>
                   <h4>
-                    <strong>Service Name</strong>
+                    <strong>Does he have a resume?</strong>
                   </h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <a href="#" class="btn btn-light">Learn More</a>
+                  <a href="#resume" class="btn btn-light js-scroll-trigger">Yes he does!</a>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
@@ -143,19 +133,25 @@
       <!-- /.container -->
     </section>
 
-    <!-- Callout -->
-    <aside class="callout">
-      <div class="text-vertical-center">
-        <h1>Vertically Centered Text</h1>
+    <!-- About -->
+    <section id="about" class="about">
+      <div class="container text-center">
+        <h2>Who is this guy?</h2>
+        <p class="lead">This is Aaron. He is a developer. He likes to code. He likes technology. He likes games. He likes craft beers. He likes satifyingly simple things.</p>
       </div>
-    </aside>
+      <!-- /.container -->
+    </section>
 
     <!-- Portfolio -->
-    <section id="portfolio" class="portfolio">
+    <section id="" class="portfolio">
+      <aside id="portfolio" class="portfolio callout">
+        <div class="text-vertical-center">
+          <h1>What has he done?</h1>
+        </div>
+      </aside>
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
-            <h2>Our Work</h2>
             <hr class="small">
             <div class="row">
               <div class="col-md-6">
@@ -197,14 +193,17 @@
       <!-- /.container -->
     </section>
 
-    <!-- Call to Action -->
-    <aside class="call-to-action bg-primary text-white">
-      <div class="container text-center">
-        <h3>The buttons below are impossible to resist.</h3>
-        <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-        <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
-      </div>
-    </aside>
+    
+    <!-- resume -->
+    <section id="resume" class="resume">
+      <aside class="call-to-action bg-primary text-white">
+        <div class="container text-center">
+          <h3>The buttons below are impossible to resist.</h3>
+          <a href="#" class="btn btn-lg btn-light">Click Me!</a>
+          <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
+        </div>
+      </aside>
+    </section>
 
     <!-- Map -->
     <section id="contact" class="map">
