--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a class="js-scroll-trigger" href="#about">Who is this guy?</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#shortcuts">That paper thing</a>
+          <a class="js-scroll-trigger" href="#shortcuts">Resumes</a>
         </li>
         <li>
           <a class="js-scroll-trigger" href="#portfolio">What has he done?</a>
@@ -51,7 +51,7 @@
             <a class="js-scroll-trigger" href="#resume">What has he done?</a>
         </li>
         <li>
-          <a class="js-scroll-trigger" href="#contact" onclick=$("#menu-close").click();>Contact</a>
+          <a class="js-scroll-trigger" href="#contact" onclick=$("#menu-close").click();>How to get in touch with him</a>
         </li>
       </ul>
     </nav>
@@ -78,7 +78,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-user fa-stack-1x text-primary"></i>
+                    <i class="fa fa-user fa-stack-1x text-dark"></i>
                   </span>
                   <h4>
                     <strong>Who is this guy?</strong>
@@ -90,7 +90,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-desktop fa-stack-1x text-primary"></i>
+                    <i class="fa fa-desktop fa-stack-1x text-dark"></i>
                   </span>
                   <h4>
                     <strong>What has he done?</strong>
@@ -102,7 +102,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                    <i class="fa fa-flask fa-stack-1x text-dark"></i>
                   </span>
                   <h4>
                     <strong>Does he have a resume?</strong>
@@ -114,7 +114,7 @@
                 <div class="service-item">
                   <span class="fa-stack fa-4x">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                    <i class="fa fa-shield fa-stack-1x text-dark"></i>
                   </span>
                   <h4>
                     <strong>Service Name</strong>
@@ -193,7 +193,7 @@
       <!-- /.container -->
     </section>
 
-    
+
     <!-- resume -->
     <section id="resume" class="resume">
       <aside class="call-to-action bg-primary text-white">
@@ -220,14 +220,9 @@
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
             <h4>
-              <strong>Start Bootstrap</strong>
+              <strong>Contact Info</strong>
             </h4>
-            <p>3481 Melrose Place
-              <br>Beverly Hills, CA 90210</p>
             <ul class="list-unstyled">
-              <li>
-                <i class="fa fa-phone fa-fw"></i>
-                (123) 456-7890</li>
               <li>
                 <i class="fa fa-envelope-o fa-fw"></i>
                 <a href="mailto:name@example.com">name@example.com</a>
