--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="#d">
                   <i class="fa fa-dribbble fa-fw fa-3x"></i>
                 </a>
               </li>
