--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </a>
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
-        <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle">
+        <a id="menu-close" href="#" class="btn btn-dark btn-lg pull-right toggle text-light">
           <i class="fa fa-times"></i>
         </a>
         <li class="sidebar-brand">
@@ -162,7 +162,7 @@
                 <div id=portfolio-project class="portfolio-item">
                   <h4 class="text-center">This website (meta isn't it ;))</h4>
                   <a href="https://www.github.com/ajesk/portfolio">
-                    <img class="img-portfolio img-fluid" src="img/website.png">
+                    <img class="img-portfolio img-fluid" src="resource/img/website.png">
                   </a>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                 <h4 class="text-center">Sudoku Solver</h4>
                 <div class="portfolio-item">
                   <a href="https://www.github.com/ajesk/sudoku-solver">
-                    <img class="img-portfolio img-fluid" src="img/sudoku.jpg">
+                    <img class="img-portfolio img-fluid" src="resource/img/sudoku.jpg">
                   </a>
                 </div>
               </div>
@@ -178,7 +178,7 @@
                 <h4 class="text-center">Spark Starter</h4>
                 <div class="portfolio-item">
                   <a href="https://www.github.com/ajesk/spark-starter">
-                    <img class="img-portfolio img-fluid" src="img/spark.png">
+                    <img class="img-portfolio img-fluid" src="resource/img/spark.png">
                   </a>
                 </div>
               </div>
@@ -186,7 +186,7 @@
                 <h4 class="text-center">Curiosity (in progress)</h4>
                 <div class="portfolio-item">
                   <a href="https://www.github.com/ajesk/curiosity">
-                    <img class="img-portfolio img-fluid" src="img/github.png">
+                    <img class="img-portfolio img-fluid" src="resource/img/github.png">
                   </a>
                 </div>
               </div>
@@ -194,7 +194,7 @@
                 <h4 class="text-center">Kata (codewars)</h4>
                 <div class="portfolio-item">
                   <a href="https://www.github.com/ajesk/kata">
-                    <img class="img-portfolio img-fluid" src="img/cw.png">
+                    <img class="img-portfolio img-fluid" src="resource/img/cw.png">
                   </a>
                 </div>
               </div>
@@ -212,8 +212,14 @@
       <aside class="call-to-action bg-light text-dark">
         <div class="container text-center">
           <h3>Resume</h3>
-          <iframe width="100%" height="1000" src="https://docs.google.com/document/d/e/2PACX-1vT9z129ANCw5HzwtVdSkAjBeqZiNMXCNFkqcA_wLTpVkbx7xI09LtqGgftPwthKGXyr-VSl-9pKCxBu/pub?embedded=true"></iframe>
+          <div id="resumecont" class="pdfobject-container">
+            <script src="vendor/pdfobject/pdfobject.min.js"></script>
+            <script>
+              PDFObject.embed("resource/pdf/ajeskie_resume_10-16-2017.pdf", "#resumecont");
+            </script>
+          </div>
         </div>
+
       </aside>
     </section>
 
@@ -259,5 +265,6 @@
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="js/stylish-portfolio.js"></script>
+
   </body>
 </html>
