minor fix to paths

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="container text-center">
           <h3>Resume</h3>
           <div id="resumecont" class="pdfobject-container">
-            <script src="vendor/pdfobject/pdfobject.min.js"></script>
+            <script src="vendor/pdf/pdfobject.min.js"></script>
             <script>
               PDFObject.embed("resource/pdf/ajeskie_resume_10-16-2017.pdf", "#resumecont");
             </script>
